@@ -8,6 +8,7 @@
 * USA Epay: Allow quantity to be passed and check custom fields [lancecarlson] #3090
 * Fix usaepay transaction invoice [lancecarlson] #3093
 * Adyen: Handles blank state address field [molbrown] #3113
+* Braintree: Send all country fields [curiousepic] #3112
 
 == Version 1.90.0 (January 8, 2019)
 * Mercado Pago: Support "gateway" processing mode [curiousepic] #3087
